--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=5.3.0",
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "crodas/Artifex":"*"
+        "crodas/Artifex":"*",
+        "crodas/Notoj":"*"
     }
 }
