--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ script: phpunit .
 php:
   - 5.3
   - 5.4
+  
+before_script:
+  curl -s http://getcomposer.org/installer | php
+  php composer.phar install
 
