--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": ">=5.3.0",
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "crodas/Artifex":">=0.5.2",
+        "crodas/Artifex":"*",
         "crodas/Notoj":"*"
     }
 }
