--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "crodas@php.net"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "symfony/console": "2.1.*",
