--- a/package.yml
+++ b/package.yml
@@ -3,8 +3,10 @@ authors:
     - name: César D. Rodas
     - email: crodas@php.net
 
+preferGlobal: true
+
 bin:
-    autoloader-gen: cli.php
+    autoloader: cli.php
 
 files: [lib],
 version: 0.1.0-beta
