--- a/package.yml
+++ b/package.yml
@@ -9,7 +9,7 @@ bin:
     autoloader: cli.php
 
 files: [lib],
-version: 0.1.0-beta
+version: 0.1.1-dev
 
 dependencies:
     - https://github.com/symfony/Console
