--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ php:
   - 5.4
   
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install
+  - wget http://cesarodas.com/eath.phar
+  - php eath.phar install
 
