--- a/package.yml
+++ b/package.yml
@@ -12,7 +12,7 @@ files: [lib],
 version: 0.1.1-dev
 
 dependencies:
-    - https://github.com/symfony/Console
-    - https://github.com/symfony/Finder
-    - https://github.com/crodas/Artifex
-    - https://github.com/crodas/Notoj
+    - github:symfony/Console
+    - github:symfony/Finder
+    - github:crodas/Artifex
+    - github:crodas/Notoj
