--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=5.3.0",
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "crodas/Artifex":"*",
-        "crodas/path": "*",
+        "crodas/Artifex":"~0.1",
+        "crodas/path": "~0.1",
         "crodas/class-info": "~0.1"
     },
     "autoload": {
