--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/finder": "2.1.*",
         "crodas/Artifex":"~0.1",
         "crodas/path": "~0.1",
-        "crodas/class-info": "~0.1"
+        "crodas/class-info": "~0.1",
+        "crodas/cli": "*"
     },
     "autoload": {
         "psr-0": {
