--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,18 @@
             "email": "crodas@php.net"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "license": "BSD-4-Clause",
     "version": "v0.1.13",
     "require": {
         "php": ">=5.3.0",
-        "symfony/console": "2.1.*",
-        "symfony/finder": "2.1.*",
+        "symfony/console": "^2.1",
+        "symfony/finder": "^2.1",
         "crodas/Artifex":"~0.1",
-        "crodas/file-util": "~0.1",
-        "crodas/class-info": "~0.1",
-        "crodas/cli": "*",
-        "crodas/simple-view-engine": "*"
+        "crodas/file-util": "^0.1",
+        "crodas/class-info": "^0.1",
+        "crodas/cli": "^0.1",
+        "crodas/simple-view-engine": "^0.1"
     },
     "autoload": {
         "psr-0": {
