--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "version": "v0.1.17",
     "require": {
         "php": ">=5.3.0",
-        "symfony/console": "^2.1",
-        "symfony/finder": "^2.1",
+        "symfony/console": "^2.1 | ^3.0",
+        "symfony/finder": "^2.1 | ^3.0",
         "crodas/file-util": "^0.1",
         "crodas/class-info": "^0.2",
         "crodas/cli": "^0.1",
