--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "php": ">=5.3.0",
         "symfony/console": "^2.1 | ^3.0",
         "symfony/finder": "^2.1 | ^3.0",
-        "crodas/file-util": "^0.1",
+        "crodas/file-util": ">=0.2",
         "crodas/class-info": "^0.2",
-        "crodas/cli": "^0.1",
+        "crodas/cli": "^0.1"
+    },
+    "require-dev": {
         "crodas/simple-view-engine": "^0.1"
     },
     "autoload": {
