--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
-script: phpunit
+script: 
+    - phpunit
 
 php:
   - 5.3
@@ -8,9 +9,29 @@ php:
   - 5.6
   - 7.0
   - 7.1
-  - hhvm
-  
-before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install
 
+matrix:
+  include:
+    - php: hhvm-3.6
+      dist: trusty
+      group: stable
+    - php: hhvm-3.9
+      dist: trusty
+      group: stable
+    - php: hhvm-3.12
+      dist: trusty
+      group: stable
+    - php: hhvm-3.15
+      dist: trusty
+      group: stable
+    - php: hhvm-3.18
+      dist: trusty
+      group: stable
+    - php: hhvm
+      dist: trusty
+      group: stable
+
+
+before_script:
+    - composer install
+    - phpunit --version
