--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 script: 
-    - phpunit
+    - ./vendor/bin/phpunit
 
 php:
   - 5.3
@@ -34,4 +34,3 @@ matrix:
 
 before_script:
     - composer install
-    - phpunit --version
